--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 FLASK_APP=app.py
 FLASK_ENV=development
 FLASK_DEBUG=0
+
+SQLALCHEMY_DATABASE_URI=postgresql://postgres:postgres@localhost/stockprediction
