--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.0.6
+APScheduler==3.5.3
 beautifulsoup4==4.7.1
 certifi==2018.11.29
 chardet==3.0.4
@@ -11,12 +12,15 @@ itsdangerous==1.1.0
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.1.0
+psycopg2==2.7.7
 python-dateutil==2.7.5
 python-dotenv==0.10.1
 python-editor==1.0.3
+pytz==2018.9
 requests==2.21.0
 six==1.12.0
 soupsieve==1.7.2
 SQLAlchemy==1.2.16
+tzlocal==1.5.1
 urllib3==1.24.1
 Werkzeug==0.14.1
