--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.1.0
 psycopg2==2.7.7
+psycopg2-binary==2.7.7
 python-dateutil==2.7.5
 python-dotenv==0.10.1
 python-editor==1.0.3
