--- a/requirements.txt
+++ b/requirements.txt
@@ -7,18 +7,27 @@ Click==7.0
 Flask==1.0.2
 Flask-Migrate==2.3.1
 Flask-SQLAlchemy==2.3.2
+h5py==2.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
+Keras==2.2.4
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
 Mako==1.0.7
 MarkupSafe==1.1.0
+numpy==1.16.2
+pandas==0.24.2
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
 python-dateutil==2.7.5
 python-dotenv==0.10.1
 python-editor==1.0.3
 pytz==2018.9
+PyYAML==5.1
 requests==2.21.0
+scikit-learn==0.20.3
+scipy==1.2.1
 six==1.12.0
 soupsieve==1.7.2
 SQLAlchemy==1.2.16
