--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+absl-py==0.7.1
 alembic==1.0.6
 APScheduler==3.5.3
+astor==0.7.1
 beautifulsoup4==4.7.1
 certifi==2018.11.29
 chardet==3.0.4
@@ -7,6 +9,8 @@ Click==7.0
 Flask==1.0.2
 Flask-Migrate==2.3.1
 Flask-SQLAlchemy==2.3.2
+gast==0.2.2
+grpcio==1.19.0
 h5py==2.9.0
 idna==2.8
 itsdangerous==1.1.0
@@ -15,9 +19,13 @@ Keras==2.2.4
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
 Mako==1.0.7
+Markdown==3.1
 MarkupSafe==1.1.0
+mock==2.0.0
 numpy==1.16.2
 pandas==0.24.2
+pbr==5.1.3
+protobuf==3.7.1
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
 python-dateutil==2.7.5
@@ -31,6 +39,10 @@ scipy==1.2.1
 six==1.12.0
 soupsieve==1.7.2
 SQLAlchemy==1.2.16
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
 tzlocal==1.5.1
 urllib3==1.24.1
 Werkzeug==0.14.1
