--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ grpcio==1.19.0
 h5py==2.9.0
 idna==2.8
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2==2.10.1
 Keras==2.2.4
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
@@ -28,6 +28,7 @@ pbr==5.1.3
 protobuf==3.7.1
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
+PTable==0.9.2
 python-dateutil==2.7.5
 python-dotenv==0.10.1
 python-editor==1.0.3
@@ -38,11 +39,11 @@ scikit-learn==0.20.3
 scipy==1.2.1
 six==1.12.0
 soupsieve==1.7.2
-SQLAlchemy==1.2.16
+SQLAlchemy==1.3.3
 tensorboard==1.13.1
 tensorflow==1.13.1
 tensorflow-estimator==1.13.0
 termcolor==1.1.0
 tzlocal==1.5.1
-urllib3==1.24.1
+urllib3==1.25.2
 Werkzeug==0.14.1
